@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2021 DBeaver Corp and others
+ * Copyright (C) 2010-2023 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,6 +18,7 @@ package org.jkiss.dbeaver.model.sql.completion;
 
 import net.sf.jsqlparser.schema.Table;
 import net.sf.jsqlparser.statement.Statement;
+import net.sf.jsqlparser.statement.create.view.CreateView;
 import net.sf.jsqlparser.util.TablesNamesFinder;
 import org.eclipse.jface.text.BadLocationException;
 import org.eclipse.jface.text.IDocument;
@@ -34,26 +35,36 @@ import org.jkiss.dbeaver.model.exec.DBCExecutionPurpose;
 import org.jkiss.dbeaver.model.exec.DBCSession;
 import org.jkiss.dbeaver.model.impl.DBObjectNameCaseTransformer;
 import org.jkiss.dbeaver.model.impl.struct.RelationalObjectType;
+import org.jkiss.dbeaver.model.lsm.LSMAnalyzer;
+import org.jkiss.dbeaver.model.lsm.sql.dialect.LSMDialectRegistry;
 import org.jkiss.dbeaver.model.navigator.DBNNode;
 import org.jkiss.dbeaver.model.navigator.DBNUtils;
+import org.jkiss.dbeaver.model.preferences.DBPPreferenceStore;
 import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.model.runtime.DBRRunnableParametrized;
 import org.jkiss.dbeaver.model.sql.*;
+import org.jkiss.dbeaver.model.sql.completion.hippie.HippieProposalProcessor;
 import org.jkiss.dbeaver.model.sql.parser.SQLParserPartitions;
 import org.jkiss.dbeaver.model.sql.parser.SQLRuleManager;
 import org.jkiss.dbeaver.model.sql.parser.SQLWordPartDetector;
 import org.jkiss.dbeaver.model.sql.parser.tokens.SQLTokenType;
+import org.jkiss.dbeaver.model.stm.*;
 import org.jkiss.dbeaver.model.struct.*;
+import org.jkiss.dbeaver.model.struct.rdb.DBSProcedure;
+import org.jkiss.dbeaver.model.struct.rdb.DBSProcedureContainer;
 import org.jkiss.dbeaver.model.text.TextUtils;
 import org.jkiss.dbeaver.model.text.parser.TPRuleBasedScanner;
 import org.jkiss.dbeaver.model.text.parser.TPToken;
 import org.jkiss.dbeaver.model.text.parser.TPTokenAbstract;
+import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.utils.ArrayUtils;
 import org.jkiss.utils.CommonUtils;
 import org.jkiss.utils.Pair;
 
+import java.io.StringReader;
 import java.lang.reflect.InvocationTargetException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * Completion analyzer
@@ -62,18 +73,35 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
     private static final Log log = Log.getLog(SQLCompletionAnalyzer.class);
 
     private static final String ALL_COLUMNS_PATTERN = "*";
+    private static final String ENABLE_HIPPIE = "SQLEditor.ContentAssistant.activate.hippie";
+    private static final String ENABLE_EXPERIMENTAL_FEATURES = "SQLEditor.ContentAssistant.experimental.enable";
     private static final String MATCH_ANY_PATTERN = "%";
     public static final int MAX_ATTRIBUTE_VALUE_PROPOSALS = 50;
     public static final int MAX_STRUCT_PROPOSALS = 100;
-
     private final SQLCompletionRequest request;
+    private final LSMTableReferencesAnalyzer tableRefsAnalyzer;
     private DBRProgressMonitor monitor;
 
     private final List<SQLCompletionProposalBase> proposals = new ArrayList<>();
     private boolean searchFinished = false;
+    private boolean checkNavigatorNodes = true;
 
     public SQLCompletionAnalyzer(SQLCompletionRequest request) {
         this.request = request;
+
+        final DBPPreferenceStore prefStore;
+        final DBPDataSource dataSource = request.getContext().getDataSource();
+        if (dataSource != null) {
+            prefStore = request.getContext().getDataSource().getContainer().getPreferenceStore();
+        } else {
+            prefStore = DBWorkbench.getPlatform().getPreferenceStore();
+        }
+
+        if (prefStore.getBoolean(ENABLE_EXPERIMENTAL_FEATURES)) {
+            tableRefsAnalyzer = new TableReferencesAnalyzer();
+        } else {
+            tableRefsAnalyzer = new TableReferencesAnalyzerOld();
+        }
     }
 
     @Override
@@ -106,11 +134,20 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
         String prevKeyWord = wordDetector.getPrevKeyWord();
         boolean isPrevWordEmpty = CommonUtils.isEmpty(wordDetector.getPrevWords());
         String prevDelimiter = wordDetector.getPrevDelimiter();
+        // Here we handle the case when user started typing the new query on the next line without query delimiter for the previous one.
+        // If setting `Blank line is statement delimiter` set, then active query is only newly typed characters
+        // and prev word can't exist in this new query - offset of prev word doesn't fit active query offset, so we set it accordingly.
+        if (request.getActiveQuery() == null || wordDetector.getPrevKeyWordOffset() < request.getActiveQuery().getOffset()) {
+            prevKeyWord = null;
+            isPrevWordEmpty = true;
+        }
         {
             if (!CommonUtils.isEmpty(prevKeyWord)) {
                 if (syntaxManager.getDialect().isEntityQueryWord(prevKeyWord)) {
                     // TODO: its an ugly hack. Need a better way
-                    if (SQLConstants.KEYWORD_DELETE.equals(prevKeyWord)) {
+                    if (SQLConstants.KEYWORD_DELETE.equals(prevKeyWord) ||
+                        SQLConstants.KEYWORD_INSERT.equals(prevKeyWord)
+                    ) {
                         request.setQueryType(null);
                     } else if (SQLConstants.KEYWORD_INTO.equals(prevKeyWord) &&
                         !isPrevWordEmpty && ("(".equals(prevDelimiter) || ",".equals(prevDelimiter)))
@@ -172,11 +209,14 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
         if (!CommonUtils.isEmpty(prevWords)) {
             previousWord = prevWords.get(0).toUpperCase(Locale.ENGLISH);
         }
+        boolean procExec;
         if (!CommonUtils.isEmpty(prevWords) &&
                 (SQLConstants.KEYWORD_PROCEDURE.equals(previousWord) || SQLConstants.KEYWORD_FUNCTION.equals(previousWord))) {
             parameters.put(SQLCompletionProposalBase.PARAM_EXEC, false);
+            procExec = false;
         } else {
             parameters.put(SQLCompletionProposalBase.PARAM_EXEC, true);
+            procExec = true;
         }
         if (queryType != null) {
             // Try to determine which object is queried (if wordPart is not empty)
@@ -195,6 +235,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                                     return;
                                 }
                                 // Fall-thru
+                            case SQLConstants.KEYWORD_SET:
                             case SQLConstants.KEYWORD_WHERE:
                             case SQLConstants.KEYWORD_AND:
                             case SQLConstants.KEYWORD_OR:
@@ -206,7 +247,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                                             isLike || (
                                                 !CommonUtils.isEmpty(prevDelimiter) &&
                                                 !prevDelimiter.endsWith(")")));
-                                    if (waitsForValue) {
+                                    if (waitsForValue && request.getContext().isShowValues()) {
                                         makeProposalsFromAttributeValues(
                                             dataSource,
                                             wordDetector,
@@ -219,12 +260,15 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                     }
                 } else if (dataSource instanceof DBSObjectContainer) {
                     // Try to get from active object
-                    DBSObject selectedObject = DBUtils.getActiveInstanceObject(request.getContext().getExecutionContext());
+                    DBSObject selectedObject = getActiveInstanceObject();
                     if (selectedObject != null) {
                         makeProposalsFromChildren(selectedObject, null, false, parameters);
                         rootObject = DBUtils.getPublicObject(selectedObject.getParentObject());
                     } else {
                         rootObject = dataSource;
+                    }
+                    if (!(rootObject instanceof DBPDataSource)) {
+                        makeDataSourceProposals(parameters);
                     }
                 }
                 if (!isInLiteral) {
@@ -245,9 +289,11 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                     // Part of column name
                     // Try to get from active object
                     DBSObjectContainer sc = (DBSObjectContainer) dataSource;
-                    DBSObject selectedObject = DBUtils.getActiveInstanceObject(request.getContext().getExecutionContext());
-                    if (selectedObject instanceof DBSObjectContainer) {
-                        sc = (DBSObjectContainer)selectedObject;
+                    if (request.getContext().getExecutionContext() != null) {
+                        DBSObject selectedObject = getActiveInstanceObject();
+                        if (selectedObject instanceof DBSObjectContainer) {
+                            sc = (DBSObjectContainer) selectedObject;
+                        }
                     }
                     SQLDialect sqlDialect = request.getContext().getDataSource().getSQLDialect();
                     String tableAlias = null;
@@ -283,7 +329,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                             sqlDialect.getCatalogSeparator(),
                             sqlDialect.getIdentifierQuoteStrings(),
                             false);
-                        rootObject = SQLSearchUtils.findObjectByFQN(monitor, sc, request.getContext().getExecutionContext(), Arrays.asList(allNames), !request.isSimpleMode(), wordDetector);
+                        rootObject = SQLSearchUtils.findObjectByFQN(monitor, sc, request, Arrays.asList(allNames));
                     }
                 }
                 if (rootObject != null) {
@@ -291,7 +337,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                 } else {
                     // Get root object or objects from active database (if any)
                     if (queryType != SQLCompletionRequest.QueryType.COLUMN && queryType != SQLCompletionRequest.QueryType.EXEC) {
-                        makeDataSourceProposals();
+                        makeDataSourceProposals(parameters);
                     }
                 }
             }
@@ -302,17 +348,13 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                 (queryType == SQLCompletionRequest.QueryType.COLUMN && request.getContext().isSearchProcedures())) &&
                 dataSource instanceof DBSObjectContainer)
             {
-                makeProceduresProposals(dataSource, wordPart, true);
+                makeProceduresProposals(dataSource, wordPart, procExec);
             }
         } else {
             if (!isInLiteral && !request.isSimpleMode() && !CommonUtils.isEmpty(prevWords)) {
                 if (SQLConstants.KEYWORD_PROCEDURE.equals(previousWord) || SQLConstants.KEYWORD_FUNCTION.equals(previousWord)) {
-                    makeProceduresProposals(dataSource, wordPart, false);
+                    makeProceduresProposals(dataSource, wordPart, procExec);
                 }
-                //may be useful in the future for procedures autocomplete
-                /*if (SQLConstants.BLOCK_BEGIN.equalsIgnoreCase(prevWords.get(0))) {
-                    makeProceduresProposals(dataSource, wordPart, true);
-                }*/
             }
         }
 
@@ -358,8 +400,14 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                 allowedKeywords = new HashSet<>();
                 if (SQLConstants.KEYWORD_DELETE.equals(prevKeyWord)) {
                     allowedKeywords.add(SQLConstants.KEYWORD_FROM);
+                } else if (SQLConstants.KEYWORD_INSERT.equals(prevKeyWord)) {
+                    allowedKeywords.add(SQLConstants.KEYWORD_INTO);
+                } else if (SQLConstants.KEYWORD_UPDATE.equals(prevKeyWord)) {
+                    allowedKeywords.add(SQLConstants.KEYWORD_SET);
                 } else {
-                    if (!SQLConstants.KEYWORD_WHERE.equalsIgnoreCase(wordDetector.getNextWord())) {
+                    if (!SQLConstants.KEYWORD_WHERE.equalsIgnoreCase(wordDetector.getNextWord()) &&
+                        !SQLConstants.KEYWORD_INTO.equals(prevKeyWord)
+                    ) {
                         allowedKeywords.add(SQLConstants.KEYWORD_WHERE);
                     }
                 }
@@ -401,18 +449,78 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                     );
                 }
             }
+            if (dataSource.getContainer().getPreferenceStore().getBoolean(ENABLE_HIPPIE)) {
+                makeProposalFromHippie(wordDetector);
+            }
         }
         filterProposals(dataSource);
     }
 
-    private void makeProceduresProposals(DBPDataSource dataSource, String wordPart, boolean exec) throws DBException {
+    private void makeProposalFromHippie(@NotNull SQLWordPartDetector wordPartDetector) {
+        HippieProposalProcessor hippieProposalProcessor = new HippieProposalProcessor(wordPartDetector);
+        String[] displayNames = hippieProposalProcessor.computeCompletionStrings(request.getDocument(), request.getDocumentOffset() - 1);
+        for (String word : displayNames) {
+            if (!hasProposal(proposals, word)) {
+                proposals.add(request.getContext().createProposal(
+                    request,
+                    word,
+                    word, // replacementString
+                    word.length(), //cursorPosition the position of the cursor following the insert
+                    null, //image to display
+                    //new ContextInformation(null, displayString, displayString), //the context information associated with this proposal
+                    DBPKeywordType.LITERAL,
+                    null,
+                    null,
+                    Collections.emptyMap()));
+            }
+        }
+    }
+    @Nullable
+    private DBSObject getActiveInstanceObject() {
+        DBCExecutionContext context = request.getContext().getExecutionContext();
+        if (context == null) {
+            return null;
+        }
+        return DBUtils.getActiveInstanceObject(context);
+    }
+
+    private void makeProceduresProposals(@NotNull DBPDataSource dataSource, @NotNull String wordPart, boolean exec) throws DBException {
         // Add procedures/functions for column proposals
         DBSStructureAssistant<?> structureAssistant = DBUtils.getAdapter(DBSStructureAssistant.class, dataSource);
         DBSObjectContainer sc = (DBSObjectContainer) dataSource;
-        DBSObject selectedObject = DBUtils.getActiveInstanceObject(request.getContext().getExecutionContext());
+        DBSObject selectedObject = getActiveInstanceObject();
         if (selectedObject instanceof DBSObjectContainer) {
-            if (request.getContext().isSearchGlobally() && !request.getWordDetector().containsSeparator(wordPart)) {
+            SQLWordPartDetector wordDetector = request.getWordDetector();
+            if (request.getContext().isSearchGlobally() && !wordDetector.containsSeparator(wordPart)) {
+                // Like "SELECT proc_name|" (and proc_name is from another container)
                 // Do not send information about the scheme to the assistant
+            } else if (wordPart.length() > 1 && wordDetector.containsSeparator(wordPart) && !wordPart.contains(selectedObject.getName())) {
+                // Like "SELECT schema_name.proc_name|" or just "SELECT schema_name.|" called from another container SQL editor
+                // It seems the user indicates the full path to the procedure/function from another scheme.
+                // Let's try to find a procedure container
+                String[] objectsNames = wordDetector.splitIdentifier(wordPart);
+                if (!ArrayUtils.isEmpty(objectsNames)) {
+                    boolean endsOnStructureSeparator = wordPart.charAt(wordPart.length() - 1) == wordDetector.getStructSeparator();
+                    int arrayIndex = 0;
+                    if (endsOnStructureSeparator) {
+                        // If word part ends on structure separator, then container name should be the last in the array
+                        arrayIndex = objectsNames.length - 1;
+                    } else if (objectsNames.length > 1) {
+                        // In this case, the procedure name should be the last in the array and container name - second last
+                        arrayIndex = objectsNames.length - 2;
+                    }
+                    String containerName = wordDetector.removeQuotes(objectsNames[arrayIndex]);
+                    if (selectedObject instanceof DBSProcedureContainer) {
+                        // selectedObject is a container, but not the one we are looking for. We will find our container through it
+                        DBSObjectContainer selectedObjectParentObject = DBUtils.getParentOfType(DBSObjectContainer.class, selectedObject);
+                        if (selectedObjectParentObject != null) {
+                            DBSObject ourContainer = selectedObjectParentObject.getChild(monitor, containerName);
+                            if (ourContainer instanceof DBSProcedureContainer && ourContainer instanceof DBSObjectContainer) {
+                                sc = (DBSObjectContainer) ourContainer;
+                            }
+                        }
+                    }
+                }
             } else {
                 sc = (DBSObjectContainer) selectedObject;
             }
@@ -456,7 +564,18 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                         if (dictEntity != null) {
                             DBSEntityAttribute refAttribute = DBUtils.getReferenceAttribute(monitor, (DBSEntityAssociation) enumConstraint, attribute, false);
                             if (refAttribute != null) {
-                                valueEnumeration = ((DBSDictionary) dictEntity).getDictionaryEnumeration(monitor, refAttribute, null, Collections.emptyList(), true, true, false, MAX_ATTRIBUTE_VALUE_PROPOSALS);
+                                valueEnumeration = ((DBSDictionary) dictEntity).getDictionaryEnumeration(
+                                    monitor,
+                                    refAttribute,
+                                    null,
+                                    null,
+                                    Collections.emptyList(),
+                                    true,
+                                    true,
+                                    false,
+                                    0,
+                                    MAX_ATTRIBUTE_VALUE_PROPOSALS
+                                );
                             }
                         }
                     }
@@ -585,8 +704,8 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
             if (wordPart.indexOf(request.getContext().getSyntaxManager().getStructSeparator()) != -1 || wordPart.equals(ALL_COLUMNS_PATTERN)) {
                 return;
             }
-            final Pair<String, String> name = extractTableName(wordPart, true);
-            if (name != null) {
+            final List<Pair<String, String>> names = tableRefsAnalyzer.getFilteredTableReferences(wordPart, true);
+            for (Pair<String, String> name : names) {
                 final String tableName = name.getFirst();
                 final String tableAlias = name.getSecond();
                 if (!hasProposal(proposals, tableName)) {
@@ -600,7 +719,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                             null,
                             false,
                             null,
-                            Collections.emptyMap())
+                            Map.of(SQLCompletionProposalBase.PARAM_NO_SPACE, true))
                     );
                 }
                 if (!CommonUtils.isEmpty(tableAlias) && !hasProposal(proposals, tableAlias)) {
@@ -614,7 +733,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                             null,
                             false,
                             null,
-                            Collections.emptyMap())
+                            Map.of(SQLCompletionProposalBase.PARAM_NO_SPACE, true))
                     );
                 }
             }
@@ -647,7 +766,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                 sqlDialect.getCatalogSeparator(),
                 sqlDialect.getIdentifierQuoteStrings(),
                 false);
-            DBSObject rightTable = SQLSearchUtils.findObjectByFQN(monitor, sc, request.getContext().getExecutionContext(), Arrays.asList(allNames), !request.isSimpleMode(), request.getWordDetector());
+            DBSObject rightTable = SQLSearchUtils.findObjectByFQN(monitor, sc, request, Arrays.asList(allNames));
             if (rightTable instanceof DBSEntity) {
                 try {
                     String joinCriteria = SQLUtils.generateTableJoin(monitor, leftTable, DBUtils.getQuotedIdentifier(leftTable), (DBSEntity) rightTable, DBUtils.getQuotedIdentifier(rightTable));
@@ -696,7 +815,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
         }
     }
 
-    private void makeDataSourceProposals() throws DBException {
+    private void makeDataSourceProposals(@NotNull Map<String, Object> parameters) throws DBException {
         DBPDataSource dataSource = request.getContext().getDataSource();
         final DBSObjectContainer rootContainer = DBUtils.getAdapter(DBSObjectContainer.class, dataSource);
         if (rootContainer == null) {
@@ -715,7 +834,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
         // There could be multiple selected objects on different hierarchy levels (e.g. PG)
         DBSObjectContainer[] selectedContainers;
         {
-            DBSObject[] selectedObjects = DBUtils.getSelectedObjects(monitor, executionContext);
+            DBSObject[] selectedObjects = DBUtils.getSelectedObjects(executionContext);
             selectedContainers = new DBSObjectContainer[selectedObjects.length];
             for (int i = 0; i < selectedObjects.length; i++) {
                 selectedContainers[i] = DBUtils.getAdapter(DBSObjectContainer.class, selectedObjects[i]);
@@ -786,10 +905,10 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
         }
         if (lastToken == null) {
             // Get all children objects as proposals
-            makeProposalsFromChildren(childObject, null, false, Collections.emptyMap());
+            makeProposalsFromChildren(childObject, null, false, parameters);
         } else {
             // Get matched children
-            makeProposalsFromChildren(childObject, lastToken, false, Collections.emptyMap());
+            makeProposalsFromChildren(childObject, lastToken, false, parameters);
             if (tokens.length == 1) {
                 // Get children from selected object
             }
@@ -797,7 +916,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                 // Try in active object
                 for (DBSObjectContainer selectedContainer : selectedContainers) {
                     if (selectedContainer != null && selectedContainer != childObject) {
-                        makeProposalsFromChildren(selectedContainer, lastToken, true, Collections.emptyMap());
+                        makeProposalsFromChildren(selectedContainer, lastToken, true, parameters);
                     }
                 }
 
@@ -811,7 +930,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                         }
                     }
                     if (structureAssistant != null) {
-                        makeProposalsFromAssistant(structureAssistant, sc, null, lastToken, Collections.emptyMap());
+                        makeProposalsFromAssistant(structureAssistant, sc, null, lastToken, parameters);
                     }
                 }
             }
@@ -839,16 +958,141 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
             token = token.substring(0, token.length() - 1);
         }
 
-        final Pair<String, String> name = extractTableName(token, false);
-        if (name != null && CommonUtils.isNotEmpty(name.getFirst())) {
-            final String[][] quoteStrings = sqlDialect.getIdentifierQuoteStrings();
-            final String[] allNames = SQLUtils.splitFullIdentifier(name.getFirst(), catalogSeparator, quoteStrings, false);
-            return SQLSearchUtils.findObjectByFQN(monitor, sc, request.getContext().getExecutionContext(), Arrays.asList(allNames), !request.isSimpleMode(), request.getWordDetector());
+        final List<Pair<String, String>> names = tableRefsAnalyzer.getFilteredTableReferences(token, false);
+        for (Pair<String, String> name : names) {
+            if (name != null && CommonUtils.isNotEmpty(name.getFirst())) {
+                final String[][] quoteStrings = sqlDialect.getIdentifierQuoteStrings();
+                final String[] allNames = SQLUtils.splitFullIdentifier(name.getFirst(), catalogSeparator, quoteStrings, false);
+                return SQLSearchUtils.findObjectByFQN(monitor, sc, request, Arrays.asList(allNames));
+            }
         }
 
         return null;
     }
 
+    public void setCheckNavigatorNodes(boolean check) {
+        this.checkNavigatorNodes = check;
+    }
+
+    private interface LSMTableReferencesAnalyzer {
+        @NotNull
+        List<Pair<String, String>> getFilteredTableReferences(@NotNull String tableAlias, boolean allowPartialMatch);
+    }
+
+    private class TableReferencesAnalyzer implements LSMTableReferencesAnalyzer {
+
+        List<Pair<String, String>> tableReferences;
+
+        private void prepareTableReferences() {
+            final SQLScriptElement activeQuery = request.getActiveQuery();
+            if (activeQuery == null) {
+                tableReferences = Collections.emptyList();
+                return;
+            }
+            try {
+                STMSource querySource = STMSource.fromReader(new StringReader(activeQuery.getText()));
+                LSMAnalyzer analyzer = LSMDialectRegistry.getInstance().getAnalyzerForDialect(
+                    request.getContext().getDataSource().getSQLDialect()
+                );
+                STMTreeRuleNode tree = analyzer.parseSqlQueryTree(querySource, new STMSkippingErrorListener());
+                tableReferences = getTableAndAliasFromSources(tree);
+                // log.debug("Extracted table names: " + tableReferences);
+            } catch (Exception e) {
+                log.debug("Failed to extract table names from query", e);
+                tableReferences = Collections.emptyList();
+            }
+        }
+
+        @NotNull
+        @Override
+        public List<Pair<String, String>> getFilteredTableReferences(@NotNull String tableAlias, boolean allowPartialMatch) {
+            List<Pair<String, String>> result;
+            if(tableReferences == null) {
+                prepareTableReferences();
+            }
+            if (CommonUtils.isNotEmpty(tableAlias) && tableReferences != null && tableReferences.size() > 0) {
+                result = tableReferences.stream().filter(r -> allowPartialMatch 
+                    ? r.getSecond() != null && CommonUtils.startsWithIgnoreCase(r.getSecond(), tableAlias)
+                    : r.getSecond() != null && r.getSecond().equalsIgnoreCase(tableAlias)
+                ).collect(Collectors.toList());
+                // log.debug("Matched ("+(allowPartialMatch ? "partial" : "exact")+") table names: " + tableReferences);
+            } else {
+                result = tableReferences;
+            }
+            return result;
+        }
+
+    }
+
+    private class TableReferencesAnalyzerOld implements LSMTableReferencesAnalyzer {
+        @NotNull
+        @Override
+        public List<Pair<String, String>> getFilteredTableReferences(@NotNull String tableAlias, boolean allowPartialMatch) {
+            return oldExtractTableNames(tableAlias, allowPartialMatch);
+        }
+
+    }
+    
+    private interface TableNameExtractionUtils { 
+        public static final Set<String> expandRulesToTableRef = Set.of(
+            STMKnownRuleNames.sqlQuery,
+            STMKnownRuleNames.directSqlDataStatement, 
+            STMKnownRuleNames.selectStatement, 
+            STMKnownRuleNames.queryExpression, 
+            STMKnownRuleNames.nonJoinQueryTerm, 
+            STMKnownRuleNames.queryPrimary, 
+            STMKnownRuleNames.nonJoinQueryPrimary, 
+            STMKnownRuleNames.simpleTable, 
+            STMKnownRuleNames.joinedTable,
+            
+            STMKnownRuleNames.querySpecification,
+            STMKnownRuleNames.naturalJoinTerm,
+            STMKnownRuleNames.crossJoinTerm,
+            
+            STMKnownRuleNames.tableExpression, 
+            STMKnownRuleNames.fromClause,
+            STMKnownRuleNames.tableReference
+        );
+        public static final Set<String> extractRulesToTableRef = Set.of(STMKnownRuleNames.nonjoinedTableReference);
+   
+        public static final Set<String> expandRulesToTableName = Set.of(
+                STMKnownRuleNames.nonjoinedTableReference, 
+                STMKnownRuleNames.correlationSpecification
+        );
+        public static final Set<String> extractRulesToTableName = Set.of(STMKnownRuleNames.tableName, STMKnownRuleNames.correlationName);
+    }
+
+    @Nullable
+    public List<Pair<String, String>> getTableAndAliasFromSources(STMTreeRuleNode query) {
+        List<Pair<String, String>> result = new ArrayList<>();
+        
+        List<STMTreeNode> tableReferences = STMUtils.expandSubtree(
+            query,
+            TableNameExtractionUtils.expandRulesToTableRef,
+            TableNameExtractionUtils.extractRulesToTableRef
+        );
+                
+        for (STMTreeNode tableRef : tableReferences) {
+            List<STMTreeNode> names = STMUtils.expandSubtree(
+                tableRef,
+                TableNameExtractionUtils.expandRulesToTableName,
+                TableNameExtractionUtils.extractRulesToTableName
+            );
+            String alias = null;
+            String tableName = null;
+            for (STMTreeNode part : names) {
+                String nodeName = part.getNodeName();
+                if (nodeName.equals(STMKnownRuleNames.tableName)) { 
+                    tableName = part.getText();
+                } else if (nodeName.equals(STMKnownRuleNames.correlationName)) {
+                    alias = part.getText(); 
+                }
+            }
+            result.add(new Pair<>(tableName, alias));
+        }
+        return result;
+    }
+    
     private enum InlineState {
         UNMATCHED,
         TABLE_NAME,
@@ -857,12 +1101,12 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
         ALIAS_NAME,
         MATCHED
     };
-
-    @Nullable
-    private Pair<String, String> extractTableName(@Nullable String tableAlias, boolean allowPartialMatch) {
+    
+    @NotNull
+    private List<Pair<String, String>> oldExtractTableNames(@Nullable String tableAlias, boolean allowPartialMatch) {
         final SQLScriptElement activeQuery = request.getActiveQuery();
         if (activeQuery == null) {
-            return null;
+            return Collections.emptyList();
         }
         final IDocument document = request.getDocument();
         final SQLRuleManager ruleManager = request.getContext().getRuleManager();
@@ -887,6 +1131,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                 ALIAS_NAME -> MATCHED    ; if found string token.
          */
 
+        List<Pair<String, String>> tableRefs = new ArrayList<>();
         try {
             InlineState state = InlineState.UNMATCHED;
             String matchedTableName = null;
@@ -913,7 +1158,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                     // Coma after table name
                     // Possible partial match
                     if (!CommonUtils.isEmpty(matchedTableName) && (CommonUtils.isEmpty(tableAlias) || CommonUtils.equalObjects(tableAlias, matchedTableAlias))) {
-                        return new Pair<>(matchedTableName, matchedTableAlias);
+                        tableRefs.add(new Pair<>(matchedTableName, matchedTableAlias));
                     }
                     matchedTableName = null;
                     state = InlineState.TABLE_NAME;
@@ -930,8 +1175,16 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                     continue;
                 }
                 if (state == InlineState.TABLE_DOT) {
-                    if (CommonUtils.isEmpty(tableAlias)) {
+                    if (CommonUtils.isEmpty(tableAlias) && !isTableQueryToken(tok, value)) {
                         state = InlineState.MATCHED;
+                    } else if (isTableQueryToken(tok, value)) {
+                        /*
+                            Sometimes we can have table without alias, it will reset state to table_name because there is no alias to check
+                            See #12335
+                         */
+                        matchedTableName = null;
+                        state = InlineState.TABLE_NAME;
+                        continue;
                     } else {
                         state = InlineState.ALIAS_AS;
                     }
@@ -950,31 +1203,31 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                 }
                 if (state == InlineState.MATCHED) {
                     prevTokenWasMatchAttempt = true;
-                    final boolean fullMatch = CommonUtils.isEmpty(tableAlias) || tableAlias.equals(matchedTableAlias);
+                    final boolean fullMatch = CommonUtils.isEmpty(tableAlias) || tableAlias.equalsIgnoreCase(matchedTableAlias);
                     final boolean partialMatch = fullMatch || (allowPartialMatch && CommonUtils.startsWithIgnoreCase(matchedTableAlias, tableAlias));
-                    if (!fullMatch && !partialMatch) {
-                        // The presented alias does not fully or partially match the matched token, reset
-                        state = InlineState.UNMATCHED;
-                        matchedTableName = null;
-                        matchedTableAlias = null;
-                    } else {
-                        return new Pair<>(matchedTableName, matchedTableAlias);
-                    }
+                    if (fullMatch || partialMatch) {
+                        tableRefs.add(new Pair<>(matchedTableName, matchedTableAlias));
+                    } 
+                    state = InlineState.UNMATCHED;
+                    matchedTableName = null;
+                    matchedTableAlias = null;
                 } else {
                     prevTokenWasMatchAttempt = false;
                 }
             }
             if (!CommonUtils.isEmpty(matchedTableName) && (CommonUtils.isEmpty(tableAlias) || CommonUtils.equalObjects(tableAlias, matchedTableAlias))) {
-                return new Pair<>(matchedTableName, matchedTableAlias);
+                tableRefs.add(new Pair<>(matchedTableName, matchedTableAlias));
             }
         } catch (BadLocationException e) {
             log.debug(e);
         }
-
-        return null;
+        return tableRefs;
     }
 
-    private static boolean isNamePartToken(TPToken tok) {
+    /**
+     * Checks if token is the name part token
+     */
+    public static boolean isNamePartToken(TPToken tok) {
         return tok.getData() == SQLTokenType.T_QUOTED
             || tok.getData() == SQLTokenType.T_KEYWORD
             || tok.getData() == SQLTokenType.T_OTHER;
@@ -1099,6 +1352,9 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                 List<SQLCompletionProposalBase> childProposals = new ArrayList<>(matchedObjects.size());
                 for (DBSObject child : matchedObjects) {
                     SQLCompletionProposalBase proposal = makeProposalsFromObject(child, !(parent instanceof DBPDataSource), params);
+                    if (proposal == null) {
+                        continue;
+                    }
                     if (!scoredMatches.isEmpty()) {
                         int proposalScore = scoredMatches.get(child.getName());
                         proposal.setProposalScore(proposalScore);
@@ -1148,37 +1404,33 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
             String[] strings = wordDetector.splitIdentifier(objectName);
             if (rootSC != null) {
                 boolean endsOnStructureSeparator = objectName.charAt(objectName.length() - 1) == wordDetector.getStructSeparator();
-                if (isParentNameInPatternNameArray(strings, rootSC, wordDetector, endsOnStructureSeparator)) {
-                    if (endsOnStructureSeparator) {
-                        objectName = "";
-                    } else {
-                        objectName = wordDetector.removeQuotes(strings[strings.length - 1]);
-                    }
+                if (endsOnStructureSeparator) {
+                    // Any object name in this case
+                    objectName = "";
+                } else {
+                    // We assume at this stage that the user writes the full path to the object, once in the objectName there are separators.
+                    // To search through an structure assistant, we need only the last part of the objectName string after the last separator
+                    objectName = wordDetector.removeQuotes(strings[strings.length - 1]);
                 }
             }
         } else {
             objectName = wordDetector.removeQuotes(objectName);
         }
         if (request.getContext().isSearchInsideNames()) {
+            if (CommonUtils.isEmpty(objectName)) {
+                return MATCH_ANY_PATTERN;
+            }
             return MATCH_ANY_PATTERN + objectName + MATCH_ANY_PATTERN;
         } else {
             return objectName + MATCH_ANY_PATTERN;
         }
     }
 
-    private boolean isParentNameInPatternNameArray(String[] strings, @NotNull DBSObjectContainer rootSC, SQLWordPartDetector wordDetector, boolean endsOnStructureSeparator) {
-        int indexOfParent;
-        if (endsOnStructureSeparator || strings.length < 2) {
-            indexOfParent = strings.length - 1;
-        } else {
-            indexOfParent = strings.length - 2;
-        }
-        return rootSC.getName().equals(wordDetector.removeQuotes(strings[indexOfParent]));
-    }
-
-    private SQLCompletionProposalBase makeProposalsFromObject(DBSObject object, boolean useShortName, Map<String, Object> params)
-    {
+    private SQLCompletionProposalBase makeProposalsFromObject(DBSObject object, boolean useShortName, Map<String, Object> params) {
         DBNNode node = DBNUtils.getNodeByObject(monitor, object, false);
+        if (checkNavigatorNodes && node == null && (object instanceof DBSEntity || object instanceof DBSObjectContainer)) {
+            return null;
+        }
 
         DBPImage objectIcon = node == null ? null : node.getNodeIconDefault();
         if (objectIcon == null) {
@@ -1196,7 +1448,10 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
         String alias = null;
         SQLTableAliasInsertMode aliasMode = SQLTableAliasInsertMode.NONE;
         String prevWord = request.getWordDetector().getPrevKeyWord();
-        if (SQLConstants.KEYWORD_FROM.equals(prevWord) || SQLConstants.KEYWORD_JOIN.equals(prevWord)) {
+        if (SQLConstants.KEYWORD_FROM.equals(prevWord) ||
+            SQLConstants.KEYWORD_INTO.equals(prevWord) ||
+            SQLConstants.KEYWORD_JOIN.equals(prevWord)
+        ) {
             if (object instanceof DBSEntity) {
                 aliasMode = SQLTableAliasInsertMode.fromPreferences(((DBSEntity) object).getDataSource().getContainer().getPreferenceStore());
             }
@@ -1211,9 +1466,19 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                             Statement sqlStatement = ((SQLQuery) request.getActiveQuery()).getStatement();
                             if (sqlStatement != null) {
                                 TablesNamesFinder namesFinder = new TablesNamesFinder() {
-                                    public void visit(Table table) {
+                                    @Override
+                                    public void visit(@Nullable Table table) {
                                         if (table != null && table.getAlias() != null && table.getAlias().getName() != null) {
                                             aliases.add(table.getAlias().getName().toLowerCase(Locale.ENGLISH));
+                                        }
+                                    }
+
+                                    @Override
+                                    public void visit(@Nullable CreateView createView) {
+                                        if (createView != null && createView.getView().getAlias() != null
+                                            && createView.getView().getName() != null
+                                        ) {
+                                            aliases.add(createView.getView().getAlias().getName().toLowerCase(Locale.ENGLISH));
                                         }
                                     }
                                 };
@@ -1226,7 +1491,7 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
                             if (aliases.contains(s) || sqlDialect.getKeywordType(s) != null) {
                                 return true;
                             }
-                            return extractTableName(s, false) != null;
+                            return !tableRefsAnalyzer.getFilteredTableReferences(s, false).isEmpty();
                         });
                         if (alias.equalsIgnoreCase(object.getName())) {
                             // Don't use alias, when it's identical to entity name
@@ -1250,10 +1515,16 @@ public class SQLCompletionAnalyzer implements DBRRunnableParametrized<DBRProgres
             if (!request.getContext().isUseShortNames() && object instanceof DBSObjectReference) {
                 if (request.getWordDetector().getFullWord().indexOf(request.getContext().getSyntaxManager().getStructSeparator()) == -1) {
                     DBSObjectReference structObject = (DBSObjectReference) object;
-                    if (structObject.getContainer() != null) {
-                        DBSObject selectedObject = DBUtils.getActiveInstanceObject(request.getContext().getExecutionContext());
-                        if (selectedObject != structObject.getContainer()) {
-                            replaceString = structObject.getFullyQualifiedName(DBPEvaluationContext.DML);
+                    DBSObject objectContainer = structObject.getContainer();
+                    if (objectContainer != null) {
+                        DBSObject selectedObject = getActiveInstanceObject();
+                        if (selectedObject != null && selectedObject != objectContainer) {
+                            if (DBSProcedure.class.isAssignableFrom(structObject.getObjectClass())) {
+                                // We do not need full routine name with parameters here
+                                replaceString = DBUtils.getFullQualifiedName(dataSource, objectContainer, structObject);
+                            } else {
+                                replaceString = structObject.getFullyQualifiedName(DBPEvaluationContext.DML);
+                            }
                             isSingleObject = false;
                         }
                     }
