@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2021 DBeaver Corp and others
+ * Copyright (C) 2010-2023 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,26 +20,28 @@ import org.apache.commons.cli.*;
 import org.eclipse.core.runtime.IConfigurationElement;
 import org.eclipse.core.runtime.IExtensionRegistry;
 import org.eclipse.core.runtime.Platform;
-import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.Log;
-import org.jkiss.dbeaver.ui.actions.datasource.ConnectionCommands;
+import org.jkiss.dbeaver.ui.actions.ConnectionCommands;
+import org.jkiss.dbeaver.ui.app.standalone.internal.CoreApplicationActivator;
+import org.jkiss.dbeaver.ui.app.standalone.rpc.DBeaverInstanceServer;
 import org.jkiss.dbeaver.ui.app.standalone.rpc.IInstanceController;
-import org.jkiss.dbeaver.ui.app.standalone.rpc.InstanceClient;
 import org.jkiss.dbeaver.utils.GeneralUtils;
+import org.jkiss.dbeaver.utils.SystemVariablesResolver;
 import org.jkiss.utils.ArrayUtils;
 import org.jkiss.utils.CommonUtils;
 import org.osgi.framework.Bundle;
 
-import java.rmi.Remote;
-import java.rmi.RemoteException;
+import java.io.FileInputStream;
+import java.io.InputStream;
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * Command line processing.
  * Note:
  * there are two modes of command line processing:
- * 1. On DBeaver start. It tries to find already running DBeaver instance (thru RMI) and make it execute passed commands
+ * 1. On DBeaver start. It tries to find already running DBeaver instance (thru REST API) and make it execute passed commands
  *    If DBeaver will execute at least one command using remote invocation then application won't start.
  *    Otherwise it will start normally (and then will try to process commands in UI)
  * 2. After DBeaver UI start. It will execute commands directly
@@ -52,6 +54,7 @@ public class DBeaverCommandLine
 
     public static final String PARAM_HELP = "help";
     public static final String PARAM_FILE = "f";
+    public static final String PARAM_CONFIG = "vars";
     public static final String PARAM_STOP = "stop";
     public static final String PARAM_THREAD_DUMP = "dump";
     public static final String PARAM_CONNECT = "con";
@@ -60,11 +63,14 @@ public class DBeaverCommandLine
     public static final String PARAM_DISCONNECT_ALL = "disconnectAll";
     public static final String PARAM_REUSE_WORKSPACE = "reuseWorkspace";
     public static final String PARAM_NEW_INSTANCE = "newInstance";
+    public static final String PARAM_BRING_TO_FRONT = "bringToFront";
     public static final String PARAM_QUIET = "q";
 
-    public final static Options ALL_OPTIONS = new Options()
-        .addOption(PARAM_HELP, false, "Help")
+    private static final String PARAM_VERSION = "version";
 
+    public final static Options ALL_OPTIONS = new Options()
+        .addOption(PARAM_HELP, PARAM_HELP, false, "Help")
+        .addOption(PARAM_CONFIG, "variablesFile", true, "Uses a specified configuration file for variable resolving")
         .addOption(PARAM_FILE, "file", true, "Open a file")
         .addOption(PARAM_STOP, "quit", false, "Stop DBeaver running instance")
         .addOption(PARAM_THREAD_DUMP, "thread-dump", false, "Print instance thread dump")
@@ -73,7 +79,14 @@ public class DBeaverCommandLine
         .addOption(PARAM_CLOSE_TABS, "closeTabs", false, "Close all open editors")
         .addOption(PARAM_REUSE_WORKSPACE, PARAM_REUSE_WORKSPACE, false, "Force workspace reuse (do not show warnings)")
         .addOption(PARAM_NEW_INSTANCE, PARAM_NEW_INSTANCE, false, "Force creating new application instance (do not try to activate already running)")
+        .addOption(PARAM_BRING_TO_FRONT, PARAM_BRING_TO_FRONT, false, "Bring DBeaver window on top of other applications")
         .addOption(PARAM_QUIET, PARAM_QUIET, false, "Run quietly (do not print logs)")
+        .addOption(
+            PARAM_VERSION,
+            PARAM_VERSION,
+            false,
+            "Displays the app name, edition, and version in Major.Minor.Micro.Timestamp format"
+        )
 
         // Eclipse options
         .addOption("product", true, "Product id")
@@ -102,7 +115,7 @@ public class DBeaverCommandLine
             this.exclusiveMode = CommonUtils.toBoolean(config.getAttribute("exclusiveMode"));
             Bundle cBundle = Platform.getBundle(config.getContributor().getName());
             Class<?> implClass = cBundle.loadClass(config.getAttribute("handler"));
-            handler = (CommandLineParameterHandler) implClass.newInstance();
+            handler = (CommandLineParameterHandler) implClass.getConstructor().newInstance();
         }
     }
 
@@ -128,15 +141,6 @@ public class DBeaverCommandLine
         }
     }
 
-    public static List<CommandLineParameterHandler> getRemoteParameterHandlers(CommandLine commandLine) {
-        List<CommandLineParameterHandler> handlers = new ArrayList<>();
-        for (ParameterDescriptor param : customParameters.values()) {
-            if (commandLine.hasOption(param.name) && !(param.handler instanceof Remote)) {
-                handlers.add(param.handler);
-            }
-        }
-        return handlers;
-    }
     /**
      * @return true if called should exit after CLI processing
      */
@@ -151,6 +155,21 @@ public class DBeaverCommandLine
             }
         }
 
+        {
+            //Set configuration file for SystemVariableResolver
+            String file = commandLine.getOptionValue(PARAM_CONFIG);
+            if (!CommonUtils.isEmpty(file)) {
+                try (InputStream stream = new FileInputStream(file)) {
+                    Properties properties = new Properties();
+                    properties.load(stream);
+                    SystemVariablesResolver.setConfiguration(properties);
+                } catch (Exception e) {
+                    log.error("Error parsing command line ", e);
+                    return false;
+                }
+            }
+        }
+
         if (controller == null) {
             log.debug("Can't process commands because no running instance is present");
             return false;
@@ -160,11 +179,7 @@ public class DBeaverCommandLine
         if (!uiActivated) {
             // These command can't be executed locally
             if (commandLine.hasOption(PARAM_STOP)) {
-                try {
-                    controller.quit();
-                } catch (RemoteException e) {
-                    e.printStackTrace();
-                }
+                controller.quit();
                 return true;
             }
             if (commandLine.hasOption(PARAM_THREAD_DUMP)) {
@@ -209,13 +224,25 @@ public class DBeaverCommandLine
             controller.executeWorkbenchCommand(ConnectionCommands.CMD_DISCONNECT_ALL);
             exitAfterExecute = true;
         }
+        if (commandLine.hasOption(PARAM_BRING_TO_FRONT)) {
+            controller.bringToFront();
+            exitAfterExecute = true;
+        }
 
         return exitAfterExecute;
     }
 
     static CommandLine getCommandLine() {
         try {
-            return new DefaultParser().parse(ALL_OPTIONS, Platform.getApplicationArgs(), false);
+            List<String> applicationArgs = Arrays.stream(Platform.getApplicationArgs()).collect(Collectors.toList());
+            int index = applicationArgs.indexOf(CoreApplicationActivator.ARG_ECLIPSE_KEYRING);
+            if (index >= 0) {
+                applicationArgs.remove(index);
+                if (applicationArgs.size() > index) {
+                    applicationArgs.remove(index);
+                }
+            }
+            return new DefaultParser().parse(ALL_OPTIONS, applicationArgs.toArray(new String[0]), false);
         } catch (Exception e) {
             log.warn("Error parsing command line: " + e.getMessage());
             return null;
@@ -233,7 +260,12 @@ public class DBeaverCommandLine
             HelpFormatter helpFormatter = new HelpFormatter();
             helpFormatter.setWidth(120);
             helpFormatter.setOptionComparator((o1, o2) -> 0);
-            helpFormatter.printHelp("dbeaver", GeneralUtils.getProductTitle(), ALL_OPTIONS, "(C) 2020-2021 DBeaver Corp", true);
+            helpFormatter.printHelp("dbeaver", GeneralUtils.getProductTitle(), ALL_OPTIONS, "(C) 2010-2023 DBeaver Corp", true);
+            return true;
+        }
+
+        if (commandLine.hasOption(PARAM_VERSION)) {
+            System.out.println(GeneralUtils.getLongProductTitle());
             return true;
         }
 
@@ -252,11 +284,8 @@ public class DBeaverCommandLine
             return false;
         }
 
-        final IInstanceController controller = InstanceClient.createClient(instanceLoc);
         try {
-            return executeCommandLineCommands(commandLine, controller, false);
-        } catch (RemoteException e) {
-            log.error("Error calling remote server", e);
+            return executeCommandLineCommands(commandLine, DBeaverInstanceServer.createClient(instanceLoc), false);
         } catch (Throwable e) {
             log.error("Error while calling remote server", e);
         }
@@ -281,11 +310,13 @@ public class DBeaverCommandLine
                 if (param.hasArg) {
                     for (String optValue : commandLine.getOptionValues(param.name)) {
                         param.handler.handleParameter(
+                            commandLine,
                             param.name,
                             optValue);
                     }
                 } else {
                     param.handler.handleParameter(
+                        commandLine,
                         param.name,
                         null);
                 }
